unpackaged/main/default/objects/Job_Event__c/Job_Event__c.object-meta.xml
<CustomObject>
    <label>Job Event</label>
    <nameField>
        <label>Job Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>