unpackaged/main/default/objects/Job_Event__c/fields/JobID__c.field-meta.xml
<CustomField>
    <fullName>JobID__c</fullName>
    <label>Job ID</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>