unpackaged/main/default/objects/Job_Event__c/fields/Process_Group__c.field-meta.xml
<CustomField>
    <fullName>Process_Group__c</fullName>
    <label>Process Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additive Only</fullName>
            </value>
            <value>
                <fullName>Subtractive Only</fullName>
            </value>
            <value>
                <fullName>Subtractive Only or Mixed</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>